# learn-rust-fe

demo-wasm/fe/: package-lock.json  package.json
demo-wasm/fe/src/: App.tsx
demo-wasm/rust/: Cargo.toml
demo-wasm/rust/src/: main.rs
fe-app/: Cargo.toml
fe-app/src/: main.rs  types.rs
fe-app/src/components/: app.rs  box_chat.rs  button.rs  input.rs  message.rs  mod.rs  title.rs
