[package]
name = "fe-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-net = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
log = "0.4.21"
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"
gloo = "0.11.0"
